--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     transition: background-color linear 1s;
+    height: 200vh;
 }
 
 main{
@@ -40,15 +41,17 @@ p{
 button{
     background-color: var(--bg-button);
     color: var(--text-btn);
-    padding: 10px 20px;
+    width: 40px;
+    height: 40px;
+    font-size: 18px;
     border: none;
     cursor: pointer;
-    border-radius: 5px;
-    box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
-    transition: linear border-radius .3s, box-shadow .5s, background-color .5s, color .5s;
+    border-radius: 50%;
+    transition: linear border-radius .3s, background-color .5s, color .5s;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
-
-button:hover{
-    box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
-    border-radius: 0px;
-}
+ header nav{
+    position: fixed;
+    top: 12px;
+    right: 12px;
+ }
